# alembic_xata_example

./: README.md  alembic.ini  pyproject.toml
alembic_xata_test/: config.py
alembic_xata_test/alembic/: env.py
alembic_xata_test/alembic/versions/: 418d220712cc_add_team_table.py
