[tool.poetry]
name = "alembic-xata-test"
version = "0.1.0"
description = ""
authors = ["Sebastian Gilits <sep.gil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
psycopg = { extras = ["binary"], version = "^3.2.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
